@@ -7,6 +7,7 @@ Version 6.6.1 - not yet released
   - fix airspace display after display rotation (#2825)
 * user interface
   - fix malformed name in airspace warning dialog (#2813)
+  - don't lost focus to waypoint list on Altair (#2835)
 * devices
   - indicate duplicate devices in list
   - allow using more than one TCP/UDP device
